////////////////////////////////////////////////////////////////////////////////
/// @file DeviceState.proto
///
/// @brief Device state
///
/// Copyright 2017 Bose Corporation
////////////////////////////////////////////////////////////////////////////////
package DeviceStatePb;


message DeviceState 
{
    optional string state        = 1;
}
